--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = esp32cam
 framework = arduino
 monitor_speed = 115200
+board_build.partitions = partitions.csv
 lib_deps = 
 	bblanchon/ArduinoJson@^6.19.4
 	witnessmenow/UniversalTelegramBot@^1.3.0
